erDiagram
  Prenda ||--o{ CargoPrenda : "IdPrenda"
  Cliente ||--o{ CargoPrenda : "IdCliente"
  Cliente |o--o{ Cliente : "IdClienteReferente"
  PlanSuscripcion |o--o{ Cliente : "IdPlan"
  Cliente ||--o{ HistorialCobro : "IdCliente"
  Cliente ||--o{ HistorialRenovacion : "IdCliente"
  PlanSuscripcion |o--o{ HistorialRenovacion : "IdPlanAnterior"
  PlanSuscripcion |o--o{ HistorialRenovacion : "IdPlanNuevo"
  Cliente |o--o{ Prenda : "IdClienteActual"
  Cliente |o--o{ Prenda : "IdUltimoCliente"
  PlanSuscripcion
  Cliente
  HistorialRenovacion
  HistorialCobro
  CargoPrenda
  Prenda
